@@ -692,6 +692,7 @@ if test -f "../Version"; then
 fi
 DATE=`date +"%Y%m%d"`
 AC_SUBST(GNUSTEP_VERSION)
+AC_SUBST(GNUSTEP_MAKE_VERSION)
 AC_SUBST(GNUSTEP_MAJOR_VERSION)
 AC_SUBST(GNUSTEP_MINOR_VERSION)
 AC_SUBST(DATE)
